# curves

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
baby_jubjub/: Cargo.toml
baby_jubjub/benches/: babyjub.rs
baby_jubjub/src/: lib.rs
baby_jubjub/src/curves/: mod.rs
bandersnatch/: Cargo.toml  README.md
bandersnatch/src/: lib.rs
bandersnatch/src/constraints/: curves.rs  mod.rs
bandersnatch/src/curves/: mod.rs  tests.rs
bandersnatch/src/fields/: mod.rs  tests.rs
bls12_377/: Cargo.toml
bls12_377/sage/: bls12_isogeny_computer.sage
bls12_377/src/: lib.rs
bls12_377/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
bls12_377/src/curves/: g1.rs  g1_swu_iso.rs  g2.rs  g2_swu_iso.rs  glv.rs  hash_isogenies_coeff.txt  mod.rs  tests.rs
bls12_377/src/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  tests.rs
bls12_381/: Cargo.toml
bls12_381/benches/: bls12_381.rs
bls12_381/src/: lib.rs
bls12_381/src/curves/: g1.rs  g1_swu_iso.rs  g2.rs  g2_swu_iso.rs  glv.rs  mod.rs  tests.rs  util.rs
bls12_381/src/curves/tests/: mod.rs
bls12_381/src/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  tests.rs
bn254/: Cargo.toml
bn254/src/: lib.rs
bn254/src/constraints/: curves.rs  mod.rs
bn254/src/curves/: g1.rs  g2.rs  glv.rs  mod.rs  tests.rs
bn254/src/fields/: fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  tests.rs
bw6_761/: Cargo.toml
bw6_761/src/: lib.rs
bw6_761/src/curves/: g1.rs  g2.rs  glv.rs  mod.rs  tests.rs
bw6_761/src/fields/: fq.rs  fq3.rs  fq6.rs  tests.rs
bw6_767/src/: lib.rs
bw6_767/src/curves/: g1.rs  g2.rs  mod.rs
bw6_767/src/fields/: fq3.rs  fq6.rs
cp6_782/: Cargo.toml
cp6_782/src/: lib.rs
cp6_782/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
cp6_782/src/fields/: fq.rs  fq3.rs  fq6.rs  tests.rs
curve-benches/: Cargo.toml
curve-benches/benches/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  ed_on_bls12_381.rs  ed_on_bls12_381_bandersnatch.rs  eris.rs  mnt4_298.rs  mnt4_753.rs  mnt6_298.rs  mnt6_753.rs  pallas.rs  pluto.rs  vesta.rs
curve-benches/src/: lib.rs
curve-benches/src/curves/: bls12_377.rs  bls12_381.rs  bn254.rs  bw6_761.rs  cp6_782.rs  ed_on_bls12_381.rs  mnt4_298.rs  mnt4_753.rs  mnt6_298.rs  mnt6_753.rs  mod.rs
curve-benches/src/macros/: ec.rs  field.rs  glv.rs  mod.rs  pairing.rs  utils.rs
curve-constraint-tests/: Cargo.toml
curve-constraint-tests/src/: lib.rs
curve-tests/: Cargo.toml
curve-tests/src/: fields.rs
curve25519/: Cargo.toml
curve25519/src/constraints/: curves.rs
curve25519/src/curves/: mod.rs
curve25519/src/fields/: fq.rs  fr.rs
ed25519/: Cargo.toml
ed25519/scripts/: g1.ipynb
ed25519/src/: lib.rs
ed25519/src/constraints/: curves.rs
ed25519/src/curves/: mod.rs
ed_on_bls12_377/: Cargo.toml
ed_on_bls12_377/src/: lib.rs
ed_on_bls12_377/src/constraints/: curves.rs  fields.rs  mod.rs
ed_on_bls12_377/src/curves/: mod.rs  recover_ws.py  tests.rs
ed_on_bls12_377/src/fields/: fr.rs  tests.rs
ed_on_bls12_381/: Cargo.toml
ed_on_bls12_381/src/: lib.rs
ed_on_bls12_381/src/constraints/: curves.rs  mod.rs
ed_on_bls12_381/src/curves/: mod.rs  tests.rs
ed_on_bls12_381/src/fields/: fr.rs  tests.rs
ed_on_bls12_381_bandersnatch/: Cargo.toml
ed_on_bls12_381_bandersnatch/benches/: ed_on_bls12_381_bandersnatch.rs
ed_on_bls12_381_bandersnatch/src/: lib.rs
ed_on_bls12_381_bandersnatch/src/constraints/: curves.rs  mod.rs
ed_on_bls12_381_bandersnatch/src/curves/: glv.rs  mod.rs  script.sage  tests.rs
ed_on_bn254/: Cargo.toml
ed_on_bn254/src/: lib.rs
ed_on_bn254/src/constraints/: curves.rs  (+1 more)
ed_on_bw6_761/: Cargo.toml
ed_on_bw6_761/src/: lib.rs
ed_on_cp6_782/: Cargo.toml
ed_on_cp6_782/src/: lib.rs
ed_on_cp6_782/src/constraints/: mod.rs
ed_on_cp6_782/src/curves/: mod.rs  tests.rs
ed_on_cp6_782/src/fields/: fr.rs  mod.rs  tests.rs
ed_on_mnt4_298/: Cargo.toml
ed_on_mnt4_298/src/: lib.rs
ed_on_mnt4_753/: Cargo.toml
ed_on_mnt4_753/src/: lib.rs
ed_on_mnt4_753/src/constraints/: curves.rs  fields.rs  mod.rs
ed_on_mnt4_753/src/curves/: mod.rs  tests.rs
ed_on_mnt4_753/src/fields/: fr.rs  tests.rs
eris/: Cargo.toml
eris/src/: lib.rs
grumpkin/src/: lib.rs
jubjub/: Cargo.toml
jubjub/benches/: jubjub.rs
jubjub/src/constraints/: curves.rs  mod.rs
mnt4_298/: Cargo.toml
mnt4_298/src/: lib.rs
mnt4_298/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
mnt4_298/src/curves/: g1.rs  g2.rs  glv.rs  mod.rs  tests.rs
mnt4_298/src/fields/: fq.rs  fq2.rs  fq4.rs  fr.rs  tests.rs
mnt4_753/: Cargo.toml
mnt4_753/src/: lib.rs
mnt4_753/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
mnt4_753/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
mnt4_753/src/fields/: fq.rs  fq2.rs  fq4.rs  fr.rs  tests.rs
mnt6_298/: Cargo.toml
mnt6_298/src/: lib.rs
mnt6_298/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
mnt6_298/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
mnt6_298/src/fields/: fq3.rs  fq6.rs  tests.rs
mnt6_753/: Cargo.toml
mnt6_753/src/: lib.rs
mnt6_753/src/constraints/: curves.rs  fields.rs  mod.rs  pairing.rs
mnt6_753/src/curves/: g1.rs  g2.rs  mod.rs  tests.rs
mnt6_753/src/fields/: fq3.rs  fq6.rs  mod.rs  tests.rs
pallas/: Cargo.toml
pallas/src/: lib.rs
pallas/src/constraints/: curves.rs  mod.rs
pallas/src/curves/: glv.rs  mod.rs  tests.rs
pallas/src/fields/: fq.rs  fr.rs  tests.rs
pluto/: Cargo.toml
pluto/src/: lib.rs
sage/: glv_param.sage  test-bls12-377-scalar.sage  test-bls12-381-scalar.sage  test-bn-254.sage  test-bw6-761.sage  test-mnt4-298.sage  test-pallas.sage  test-vesta.sage  test_bandersnatch.sage
secp256k1/: Cargo.toml
secp256k1/benches/: secp256k1.rs
secp256k1/src/: lib.rs
secp256r1/: Cargo.toml
secp256r1/src/: lib.rs
secp384r1/: Cargo.toml
secp384r1/src/: lib.rs
secq256k1/: Cargo.toml
secq256k1/src/: lib.rs
tweedle/: Cargo.toml
tweedle/src/: lib.rs
tweedledee/: Cargo.toml
tweedledee/src/: lib.rs
tweedledum/: Cargo.toml
tweedledum/src/: lib.rs
vesta/: Cargo.toml
vesta/src/: lib.rs
(+67 files in other folders)
