[workspace]

members = [
    "curve-benches",
    "curve-constraint-tests",

    "bls12_377",
    "ed_on_bls12_377",

    "bw6_761",
    "ed_on_bw6_761",

    "cp6_782",
    "ed_on_cp6_782",

    "bls12_381",
    "ed_on_bls12_381",

    "bn254",
    "ed_on_bn254",

    "mnt4_298",
    "mnt6_298",
    "ed_on_mnt4_298",

    "mnt4_753",
    "mnt6_753",
    "ed_on_mnt4_753",

    "pallas",
    "vesta",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
