[package]
name = "ark-curve-benches"
version = "0.3.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daira Hopwood"
]
description = "A benchmark library for finite fields and elliptic curves"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/curves"
documentation = "https://docs.rs/algebra/"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false
build = "build.rs"

################################# Dependencies ################################

[dependencies]
bencher = { version = "0.1.5" }

[dev-dependencies]
ark-std = { version = "^0.3.0", default-features = false }
ark-ec = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-serialize = { version = "^0.3.0", default-features = false }

ark-mnt4-298 = { path = "../mnt4_298" }
ark-mnt6-298 = { path = "../mnt6_298" }
ark-mnt4-753 = { path = "../mnt4_753" }
ark-mnt6-753 = { path = "../mnt6_753" }
ark-bn254 = { path = "../bn254" }
ark-bls12-377 = { path = "../bls12_377" }
ark-bls12-381 = { path = "../bls12_381" }
ark-ed-on-bls12-381 = { path = "../ed_on_bls12_381" }
ark-bw6-761 = { path = "../bw6_761" }
ark-cp6-782 = { path = "../cp6_782" }
ark-pallas = { path = "../pallas" }
ark-vesta = { path = "../vesta" }

[features]
asm = [ "ark-ff/asm"]
parallel = [ "ark-ff/parallel",  "ark-ec/parallel", ]
n_fold = []

[build-dependencies]
rustc_version = "0.2"

[[bench]]
name = "bls12_377"
path = "benches/bls12_377.rs"
harness = false

[[bench]]
name = "bls12_381"
path = "benches/bls12_381.rs"
harness = false

[[bench]]
name = "bn254"
path = "benches/bn254.rs"
harness = false

[[bench]]
name = "bw6_761"
path = "benches/bw6_761.rs"
harness = false

[[bench]]
name = "cp6_782"
path = "benches/cp6_782.rs"
harness = false

[[bench]]
name = "ed_on_bls12_381"
path = "benches/ed_on_bls12_381.rs"
harness = false

[[bench]]
name = "mnt4_298"
path = "benches/mnt4_298.rs"
harness = false

[[bench]]
name = "mnt6_298"
path = "benches/mnt6_298.rs"
harness = false

[[bench]]
name = "mnt4_753"
path = "benches/mnt4_753.rs"
harness = false

[[bench]]
name = "mnt6_753"
path = "benches/mnt6_753.rs"
harness = false

[[bench]]
name = "pallas"
path = "benches/pallas.rs"
harness = false

[[bench]]
name = "vesta"
path = "benches/vesta.rs"
harness = false
